--- a/flight/pubspec.yaml
+++ b/flight/pubspec.yaml
@@ -39,10 +39,15 @@ dependencies:
 
   google_maps_flutter: ^2.4.1
 
+  mobx: ^2.2.0
+  flutter_mobx: ^2.0.6+5
+  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^2.4.6
+  mobx_codegen: ^2.3.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
