--- a/flight/pubspec.yaml
+++ b/flight/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
 
   mobx: ^2.2.0
   flutter_mobx: ^2.0.6+5
+
+  cached_network_image: ^3.2.3
+
+  auto_size_text: ^3.0.0
   
 
 dev_dependencies:
