--- a/flight/pubspec.yaml
+++ b/flight/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
 
   json_serializable: ^6.7.1
   json_annotation: ^4.8.1
+
+  flutter_svg: ^2.0.7
+  lottie: ^2.6.0
   
 
 dev_dependencies:
@@ -76,6 +79,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/svg/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
